--- a/key-frontend/src/components/log-in.css
+++ b/key-frontend/src/components/log-in.css
@@ -1,17 +1,24 @@
 #loginbody {
     margin: auto;
-    width: 34%;
-    height: 400px;
+    width: 315px;
+    height: 450px;
     /* border: 3px solid green; */
     padding: 10px 0;
 }
 
 #loginouter {
-    /* padding: 70px 0; */
+    margin: auto;
+    height: 500px;
+    width: 340px;
 }
 
 .btn-space {
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 20px;
+}
+
+.img-space {
+    margin-left: 250px;
+    /* float: right; */
 }
