--- a/dunjin-app/src/App.css
+++ b/dunjin-app/src/App.css
@@ -8,6 +8,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background-image: url("./style/twotonebg.png");
 }
 
 .App-link {
