--- a/dunjin-app/src/App.css
+++ b/dunjin-app/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: #383838;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -8,9 +8,21 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  background-image: url("./style/twotonebg.png");
+  /* background-image: url("./style/twotonebg.png"); */
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.loginScreen {
+  text-align: center;
+  background-color: #000000;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
