--- a/dunjin-app/src/components/stylesheets/Transact.css
+++ b/dunjin-app/src/components/stylesheets/Transact.css
@@ -5,7 +5,7 @@ table {
   }
   
   td, th {
-    border: 1px solid #dddddd;
+    border: 1px solid #000000;
     text-align: left;
     width: 800px;
   }
