--- a/dunjin-app/src/components/stylesheets/Link.css
+++ b/dunjin-app/src/components/stylesheets/Link.css
@@ -1,14 +1,78 @@
+.bgInfo {
+    background-color: #000000;
+    width: 1000px;
+    padding: 20px;
+    text-align: center;
+    border-radius: 20px;
+    top: 100px;
+    position: fixed;
+}
+
 .bgTable {
-    width: 900px;
+    width: 1000px;
     height: auto;
-    /* background-color: #343a40; */
     background-image: url("../../style/twotonebg2.png");
     opacity: 0.8;
     text-align: center;
-    border-radius: 20px 20px 20px 20px;
-    
+    border-radius: 0 20px 20px 20px;
 }
 
 .noDisplay {
     display: none;
+}
+
+.plaidlink {
+    background-color: red;
+    color: blue;
+    position: absolute;
+}
+
+button {
+    border: none;
+    border-radius: 20px;
+    background-image: url("../../style/twotonebg2.png");
+    color: white;
+    padding: 15px;
+    margin: 10px;
+    list-style-type: none;
+    margin: 0;
+    padding: 15px;
+    background-color: #000000;
+    top: 0;
+}
+
+button:hover {
+    background-image: url("../../style/twotonebg2.png");
+    color: white;
+    -webkit-filter: invert(75%);
+    filter: invert(75%);
+}
+
+.tab {
+    top: 0;
+    overflow: hidden;
+}
+  
+/* Style the buttons that are used to open the tab content */
+.tab span {
+    float: left;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    background-color: #000000;
+    border-radius: 20px 20px 0 0;
+    border-bottom-style: solid;
+    border-bottom-color: #000000;
+    margin: 8px;
+}
+
+.tab span:hover {
+    border-bottom-style: solid;
+    border-bottom-color: #c41c6a;
+    color: #c41c6a;
+}
+
+.tablinks {
+    box-shadow: 0 -1px 0 3px #c41c6a !important;
+    color: white !important;
 }
