--- a/dunjin-app/src/components/stylesheets/Login.css
+++ b/dunjin-app/src/components/stylesheets/Login.css
@@ -24,6 +24,13 @@
     margin: 15px;
 }
 
+.btn:hover {
+    background-image: url("../../style/twotonebg2.png");
+    color: white;
+    -webkit-filter: invert(75%);
+    filter: invert(75%);
+}
+
 .loginScreen {
     background-color: #000000;
 }
