--- a/dunjin-app/src/components/stylesheets/Transact.css
+++ b/dunjin-app/src/components/stylesheets/Transact.css
@@ -1,16 +1,61 @@
-table {
-    font-size: small;
-    border-collapse: collapse;
-    width: 100px;
-  }
-  
-  td, th {
-    border: 1px solid #000000;
-    text-align: left;
-    width: 800px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #616b80;
-    color: darkgrey;
-  }
+.trtable {
+  font-size: small;
+  border-collapse: collapse;
+  width: 800px;
+  height: auto;
+}
+
+.trtable th {
+  background-color: #000000;
+}
+
+.trtable td, .trtable th {
+  border: 2px solid #000000;
+  text-align: left;
+  width: 800px;
+}
+
+.trtable tr:nth-child(odd) {
+  background-color: #383838;
+  color: gainsboro;
+}
+
+.trtable tr:nth-child(even) {
+  background-image: url("../../style/twotonebg2.png");
+  color: white;
+}
+
+select {
+  width: 100%;
+  height: 100%;
+  border: none;
+  -webkit-appearance: none; 
+  color: #ffffff;
+  background-color: #383838;
+}
+
+select:hover {
+  background-color: #000000;
+}
+
+
+.tBtn {
+  padding:8px;
+  margin:10px;
+  background-color: #383838;
+  color: white;
+  float: right;
+  font-size:small;
+  border-style: solid;
+  border-color: #383838;
+}
+
+.tBtn:hover {
+  border-style: solid;
+  background-image: url("../../style/twotonebg2.png");
+  padding:8px;
+  margin:10px;
+  float: right;
+  font-size:small;
+  cursor: default;
+}
